--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "pg": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.2",
-    "@types/node": "^12.12.9"
+    "@types/node": "^12.12.9",
+    "@types/pg": "^7.14.4"
   }
 }
